Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-1235

Warning message on GetFile

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 0.7.0
    • None
    • None

    Description

      I have my MiNiFi C++ agents running and I see this warning:

      [2020-05-22 17:38:06.836] [org::apache::nifi::minifi::processors::GetFile] [warning] Resolved missing Input Directory property value

      However the input directory value is correctly set (I have 2 GetFile processors):

      /opt/minifi/nifi-minifi-cpp-0.7.0 $ grep "Input" /opt/minifi/minifi-current/conf/config.yml 
       Input Directory: /data/input
       Input Directory: /data/input

       Not sure to understand the warning message.

      Attachments

        Activity

          People

            adam-markovics Ádám Markovics
            pvillard Pierre Villard
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 20m
                20m