MINIFICPP-1235 - Warning message on GetFile

Signed-off-by: Arpad Boda <aboda@apache.org>

This closes #800